Fri Sep 11 02:14:21 2009  Tanaka Akira  <akr@fsij.org>

	* test/dl: use require_relative to require test_base.rb.

Fri Sep 11 02:06:44 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* parse.y (rb_char_to_option_kcode): ASCII-8BIT should
	  also delay.

	* re.c (parser_regx_options): return rb_ascii8bit_encindex on
	  ASCII-8BIT. [ruby-dev:39300]

Fri Sep 11 01:14:00 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/net/http.rb (fetch): rdoc fix, patch by Arthur Schreiber.
	  [ruby-core:18309].

Thu Sep 10 23:00:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (create_makefile): fix for parallel execution.
	  [ruby-core:25509]

Thu Sep 10 21:22:01 2009  Tanaka Akira  <akr@fsij.org>

	* test/dl/test_cptr.rb (test_free=): test SEGV at first.
	  [ruby-dev:39269]

Thu Sep 10 21:20:59 2009  Tanaka Akira  <akr@fsij.org>

	* test/ruby/envutil.rb (assert_normal_exit): Don't use
	  AssertionMessage.

Thu Sep 10 15:59:05 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (UNKNOWN_ESC_WARN): added.

	* regparse.c (conv_backslash_value): Warn unknown
	  escaped chars in regexp. [ruby-dev:39104]

Wed Sep  9 22:02:02 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/fileutils.rb (FileUtils::Entry_#copy_file): open the source
	  file first to ensure it can be copied.  [ruby-core:25498]

Wed Sep  9 21:20:49 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (BigDecimal_data_type): typed.

	* ext/dl/cfunc.c (dlcfunc_data_type): typed.

	* ext/dl/cptr.c (dlptr_data_type): ditto.

	* ext/dl/handle.c (dlhandle_data_type): ditto.

Wed Sep  9 17:17:31 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* re.c (parser_regx_options): only one kcode should effect
	  options [ruby-core:25411]

Wed Sep  9 15:46:28 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* load.c (rb_feature_provided): fixed for autoloading extension
	  library without suffix.

Wed Sep  9 15:24:32 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>
