@@ -1,3 +1,9 @@
+Fri Sep 11 05:00:19 2009  Koichi Sasada  <ko1@atdot.net>
+
+	* include/ruby/ruby.h (rb_data_type_t): Add comments.
+	  And add a member variable "data", a multi-purpose storage
+	  area for rb_data_type.
+
 Fri Sep 11 02:14:21 2009  Tanaka Akira  <akr@fsij.org>
 
 	* test/dl: use require_relative to require test_base.rb.
